InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/SmartCommunications__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Metadata Type holds OAuth2.0 Password Grant details</description>
    <label>SmartCommunications</label>
    <pluralLabel>SmartCommunications</pluralLabel>
</CustomObject>