InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/fields/accessTokenUrl__c.field-meta.xml
<CustomField>
    <fullName>accessTokenUrl__c</fullName>
    <label>Token Endpoint URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>