InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/fields/clientId__c.field-meta.xml
<CustomField>
    <fullName>clientId__c</fullName>
    <label>Consumer Key</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>