InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/fields/clientSecret__c.field-meta.xml
<CustomField>
    <fullName>clientSecret__c</fullName>
    <label>Consumer Secret</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>