InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/fields/credsInHeader__c.field-meta.xml
<CustomField>
    <fullName>credsInHeader__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Send client credentials in header</label>
    <type>Checkbox</type>
</CustomField>