InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/fields/redirectUri__c.field-meta.xml
<CustomField>
    <fullName>redirectUri__c</fullName>
    <label>Callback URL</label>
    <required>true</required>
    <type>Url</type>
</CustomField>