InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/fields/scope__c.field-meta.xml
<CustomField>
    <fullName>scope__c</fullName>
    <label>Default Scopes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>