InsuranceOrg/force-app/main/default/objects/SmartCommunications__mdt/fields/username__c.field-meta.xml
<CustomField>
    <fullName>username__c</fullName>
    <label>username</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>